Preferences #60358

Closed
opened 2019-01-09 19:17:46 +01:00 by Kent Davis · 15 comments

MacOS 10.14.2
2017
27"
5K

Make sure Macintosh not use Windows.
Focus on Edit > Preferences . . .

I don't know how to explain text.
I am show you picture on Preferences when appear no show text while wrap small. When drag enlarge make appear text. Need to fix. (Quick appear)
Not only Add-Ons. Only all of Preferences.

Screen Shot 2019-01-09 at 9.51.06 AM.png

Screen Shot 2019-01-09 at 9.51.29 AM.png

MacOS 10.14.2 2017 27" 5K Make sure Macintosh not use Windows. Focus on Edit > Preferences . . . I don't know how to explain text. I am show you picture on Preferences when appear no show text while wrap small. When drag enlarge make appear text. Need to fix. (Quick appear) Not only Add-Ons. Only all of Preferences. ![Screen Shot 2019-01-09 at 9.51.06 AM.png](https://archive.blender.org/developer/F6232479/Screen_Shot_2019-01-09_at_9.51.06_AM.png) ![Screen Shot 2019-01-09 at 9.51.29 AM.png](https://archive.blender.org/developer/F6232482/Screen_Shot_2019-01-09_at_9.51.29_AM.png)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Sorry, but you'll have to actually explain 1) the issue, and 2) how to reproduce it, otherwise developers have no way to help you with your problem.

Preferences when appear no show text while wrap small

This is too vague I'm afraid. Please be specific and accurate. Thanks.

Sorry, but you'll have to actually explain 1) the issue, and 2) how to reproduce it, otherwise developers have no way to help you with your problem. > Preferences when appear no show text while wrap small This is too vague I'm afraid. Please be specific and accurate. Thanks.
Author

Did you see this picture on below. You can check yourself on Blender 2.80 Edit > Preferences you will see.

Did you see this picture on below. You can check yourself on Blender 2.80 Edit > Preferences you will see.

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

@Kent-Davis You mean this, right? The popup can't go out of the window/cropped text etc...?
2019-01-09_21-22-38.gif

@Kent-Davis You mean this, right? The popup can't go out of the window/cropped text etc...? ![2019-01-09_21-22-38.gif](https://archive.blender.org/developer/F6233436/2019-01-09_21-22-38.gif)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ThinkingPolygons I have no idea if that is the issue the reporter was trying to convey, but I can confirm that issue.

@ideasman42 Is this something for you?

Obviously we can't draw outside the window, but we could make the error box less wide or make the text flow to the next line.

@ThinkingPolygons I have no idea if that is the issue the reporter was trying to convey, but I can confirm that issue. @ideasman42 Is this something for you? Obviously we can't draw outside the window, but we could make the error box less wide or make the text flow to the next line.
Author

Hard for me to explain on text only.

ThinkingPolygons (ThinkingPolygons) Yes. Not only Add-ons. I mean when appear (quickpop paragraph) any where within Preferences.

That mean when preferences window make small and doesn't appear text (quickpop paragraph) is empty when drag make enlarge horizontal on Preferences window then (quickpop paragraph) is text appear.

Hard for me to explain on text only. ThinkingPolygons (ThinkingPolygons) Yes. Not only Add-ons. I mean when appear (quickpop paragraph) any where within Preferences. --------------------------------------------------------------------------------------- That mean when preferences window make small and doesn't appear text (quickpop paragraph) is empty when drag make enlarge horizontal on Preferences window then (quickpop paragraph) is text appear.

This issue was referenced by f974a02285

This issue was referenced by f974a02285c74f669a1714e98de86ba39293bc21

This issue was referenced by f9d14ceb40

This issue was referenced by f9d14ceb403341f833bc5fc91f41d7a6d538495a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Current error message display is limited but this isn't a new problem.

We should have a special popup region that can handle larger messages.

OTOH. users shouldn't be seeing these issues often.

Fixed the error shown in this report (clipping the menu was failing).

Current error message display is limited but this isn't a new problem. We should have a special popup region that can handle larger messages. OTOH. users shouldn't be seeing these issues often. Fixed the error shown in this report (clipping the menu was failing).
Author

Goooooooooooooooooood

Goooooooooooooooooood
Author

Let's close this ticket. There fixed Blender 2.80 (January 12, 2018)

Let's close this ticket. There fixed Blender 2.80 (January 12, 2018)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60358
No description provided.