Fix T60358: popup clipping within window

Moving menu contents wasn't working properly.